<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_secondary70"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.activity.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/text_hint_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral50"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/text_hint_username"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral50"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/text_hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral50"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/text_register"
        android:textSize="16sp" />

</LinearLayout>